# Burnham

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  input.sam  marked.sam  metrics.json  plan.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: mark-duplicates-spec.md  phase-0-3-audit.md  phase4-completion.md  phase4-plan.md  phase5-completion.md  phase5-plan.md  roadmap.md  specs.md  v1-mvp.md
include/burnham/: chain_index.hpp  cigar.hpp  commands.hpp  fs.hpp  hts.hpp  result.hpp  sam.hpp  sample_index.hpp  text.hpp  vcf.hpp
scripts/: bench-phase4.ps1  build-clang.ps1  compare-phase4.ps1  package-release.ps1  test-clang.ps1  verify-phase5.ps1  verify-v1-mvp.ps1
src/: chain_index.cpp  cigar.cpp  commands.cpp  fs.cpp  hts.cpp  main.cpp  sam.cpp  sample_index.cpp  text.cpp  vcf.cpp
tests/: unit_tests.cpp
